agentgateway/kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
spec:
  parentRefs:
  - name: agentgateway
  rules:
    - backendRefs:
      - name: mcp-backend
        group: gateway.kgateway.dev
        kind: Backend   
---
# Could also do dynamic service discovery
#apiVersion: gateway.kgateway.dev/v1alpha1
#kind: Backend
#metadata:
#  name: mcp-backend
#spec:
#  type: MCP
#  mcp:
#    name: mcp-virtual-server
#    targets:
#      - selectors:
#          serviceSelector:
#            matchLabels:
#              app: mcp-website-fetcher
